--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,8 @@
-pandas==1.5.0
-scikit_learn==1.1.1
+imbalanced_learn==0.12.3
+lightgbm==4.5.0
+matplotlib==3.6.0
+numpy==1.23.5
+pandas==1.5.3
+scikit_learn==1.2.2
+xgboost==2.1.1
+seaborn==0.13.2
